Correction of padding in the section with id=hero to better align the content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ h6 {
 }
 
 #hero .hero-container {
-  position: absolute;
+  position: relative;
   z-index: 2;
   min-width: 300px;
 }
